director issue solved

--- a/app/views/movie_templates/index.html.erb
+++ b/app/views/movie_templates/index.html.erb
@@ -88,7 +88,13 @@
       
       <% the_director = matching_directors.at(0) %>
 
-      <%= the_director.name %>
+
+    <% if the_director == nil %>
+      Uh-oh, no director found.
+    <% else %>
+    <%= the_director.name %>
+    <% end %>
+    
     </td>
 
     <td>
