id error resolve

--- a/app/views/movie_templates/index.html.erb
+++ b/app/views/movie_templates/index.html.erb
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-<label for="director_id_field">Director Id</label>
+<label for="director_id_field">Director ID</label>
 <input type="text" name="the_director_id" id="director_id_field">
 </div>
 
