edit form created

--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -11,6 +11,43 @@
 </div>
 <hr>
 
+<form action="/modify_movie_record/<%= @the_movie.id %>" method = "post">
+<div>
+<label for="title_field">Title</label>
+<input id = "title_field" type="text" name="the_title">
+</div>
+
+<div>
+<label for="year_field">Year</label>
+<input type="text" name="the_year" id="year_field">
+</div>
+
+<div>
+<label for="duration_field">Duration</label>
+<input id="duration_field" type="text" name="the_duration">
+</div>
+
+<div>
+<label for="description_field">Description Field</label>
+<input id="description_field" type="text" name = "the_description">
+</div>
+
+<div>
+<label for="image_field">Image</label>
+<input id="image_field" type="text" name="the_image">
+</div>
+
+<div>
+<label for="director_id_field">Director ID</label>
+<input type="text" name="the_director_id" id="director_id_field">
+</div>
+
+<button>Update Movie</button>
+
+</form>
+
+<hr>
+
 <dl>
   <dt>
     Title
