--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -4,6 +4,32 @@
 
 <hr>
 
+<form action="/insert_director_record" method="post">
+
+<div>
+<label for="name_field">Name</label>
+<input id = "name_field" type="text" name="the_name">
+</div>
+
+<div>
+<label for="dob_field">Dob</label>
+<input type="date" name="the_dob" id="dob_field">
+</div>
+
+<div>
+<label for="bio_field">Bio</label>
+<textarea id="bio_field" name="the_bio"></textarea>
+</div>
+
+<div>
+<label for="image_field">Image</label>
+<input id="image_field" type="text" name="the_image">
+</div>
+
+<button>Create director</button>
+</form>
+<hr>
+
 <table border="1">
   <tr>
     <th>
