--- a/app/views/director_templates/show.html.erb
+++ b/app/views/director_templates/show.html.erb
@@ -11,6 +11,31 @@
 </div>
 <hr>
 
+
+<form action="/modify_director_record/<%= @the_director.id %>" method="post">
+
+<div>
+<label for="name_field">Name</label>
+<input id = "name_field" type="text" name="the_name" value = "<%= @the_director.name %>">
+</div>
+
+<div>
+<label for="dob_field">Dob</label>
+<input type="date" name="the_dob" id="dob_field" value="<%= @the_director.dob %>">
+</div>
+
+<div>
+<label for="bio_field">Bio</label>
+<textarea id="bio_field" name="the_bio" value="<%= @the_director.bio %>"></textarea>
+</div>
+
+<div>
+<label for="image_field">Image</label>
+<input id="image_field" type="text" name="the_image" value="<%= @the_director.image %>">
+</div>
+
+<button>Update director</button>
+</form>
 <hr>
 
 <dl>
