actor delete finish

--- a/app/views/actor_templates/index.html.erb
+++ b/app/views/actor_templates/index.html.erb
@@ -4,7 +4,7 @@
 
 <hr>
 
-<form action="/insert_director_record" method="post">
+<form action="/insert_actor_record" method="post">
 
 <div>
 <label for="name_field">Name</label>
