--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -12,6 +12,34 @@
 </div>
 <hr>
 
+
+
+<form action="/modify_actor_record/<%= @the_actor.id %>"" method="post">
+
+<div>
+<label for="name_field">Name</label>
+<input id = "name_field" type="text" name="the_name" value="<%= @the_actor.name %>">
+</div>
+
+<div>
+<label for="dob_field">Dob</label>
+<input type="date" name="the_dob" id="dob_field" value="<%= @the_actor.dob %>">
+</div>
+
+<div>
+<label for="bio_field">Bio</label>
+<textarea id="bio_field" name="the_bio" ><%= @the_actor.bio %></textarea>
+</div>
+
+<div>
+<label for="image_field">Image</label>
+<input id="image_field" type="text" name="the_image" value="<%= @the_actor.image %>">
+</div>
+
+<button>Create actor</button>
+</form>
+<hr>
+
 <dl>
   <dt>
     Name
