--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -36,7 +36,7 @@
 <input id="image_field" type="text" name="the_image" value="<%= @the_actor.image %>">
 </div>
 
-<button>Create actor</button>
+<button>Update actor</button>
 </form>
 <hr>
 
